--- a/templates/details.html
+++ b/templates/details.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="credits px-2" style="background-color: #0005">
-      <h2 class="text-xl pt-2">Credits</h2>
+      <h2 class="text-xl pt-2">Cast</h2>
       <div
         class="scroll-horizontal credit-wrapper flex flex-row h-32 flex-nowrap overflow-x-scroll gap-x-2 mt-2 pb-10"
         style="scrollbar-width: none"
